--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <nav class="navbar">
             <a href="#home" class="active">Home</a>
             <a href="#about">About</a>
-            <a href="#services">Services</a>
+            <a href="#services">Skills</a>
             <a href="#contact">Contact</a>
         </nav>
 
